--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "propaganistas/laravel-intl",
+    "name": "lozhkindm/laravel-intl",
     "description": "Easy to use internationalization functions for Laravel",
     "keywords": [
         "laravel",
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": ">=7.1.3",
-        "illuminate/events": "^5.8|^6.0",
-        "illuminate/support": "^5.8|^6.0",
+        "illuminate/events": "^7.3",
+        "illuminate/support": "^7.3",
         "nesbot/carbon": "^2.0",
         "commerceguys/intl": "^1.0.1",
         "umpirsky/country-list": "^2.0",
