--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Easy to use internationalization functions for Laravel",
     "keywords": [
         "laravel",
+        "laravel 7",
         "internationalization",
         "intl",
         "i18n",
